# Dedupe-Archived-Files

./: .gitignore  PERFORMANCE_IMPROVEMENTS.md  QUICKSTART.md  README.md  main.py  pyproject.toml  requirements.txt  run_tests.py
core/: __init__.py  database.py  extractor.py  extractor_new_detect.txt  file_ops.py  hasher.py  models.py  scanner.py
tests/: __init__.py  conftest.py  test_database.py  test_extensive.py  test_extractor.py  test_file_ops.py  test_hasher.py  test_models.py  test_scanner.py  test_tui.py
tui/: __init__.py  app.py  styles.tcss
tui/screens/: __init__.py
tui/widgets/: __init__.py
